sophons/apps/traefik/dev/deployment.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.34.1/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plugin-traefik
  namespace: traefik
  labels:
    app.kubernetes.io/name: plugin-traefik
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: plugin-traefik
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plugin-traefik
    spec:
      hostUsers: false
      serviceAccountName: traefik
      automountServiceAccountToken: true

      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault

      volumes:
        - name: config
          configMap:
            name: plugin-traefik-config
        - name: plugin-cilium-trustedips
          configMap:
            name: traefik-plugin-cilium-trustedips

      containers:
        - name: traefik
          image: docker.io/library/traefik:3.7.12
          args:
            - --providers.file.directory=/etc/traefik
            - --providers.file.watch=true
            - -entryPoints.web.address=:80/tcp
            - -entryPoints.web.forwardedHeaders.insecure=true
            - -entryPoints.web.http.middlewares=cilium-trustedips@file
            - -experimental.localPlugins.cilium-trustedips.moduleName=pluginciliumtrustedips

          volumeMounts:
            - mountPath: /etc/traefik
              name: config
              readOnly: true
            - mountPath: /plugins-local/src/pluginciliumtrustedips
              name: plugin-cilium-trustedips
              readOnly: true

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
              add: [NET_BIND_SERVICE]

        - name: whoami
          image: traefik/whoami:v1.12.0
          args:
            - --port=8080

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
              add: [NET_BIND_SERVICE]
---
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.34.1/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: plugin-traefik
  namespace: traefik
  labels:
    app.kubernetes.io/name: plugin-traefik
spec:
  selector:
    app.kubernetes.io/name: plugin-traefik
  ports:
    - name: http
      protocol: TCP
      port: 80
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/nlamirault/schema-hub/main/schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plugin-traefik
  namespace: traefik
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure

  rules:
    - matches:
        - path:
            type: Exact
            value: /plugin-traefik/whoami
      backendRefs:
        - name: dev-plugin-traefik
          port: 80
